--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
 <!--The content below is only a placeholder and can be replaced.-->
-<div>
-  <h1>hello</h1>
+<div class="main">
+  <app-header></app-header>
 </div>
