add radios chanell component and add style also render in app component

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,5 +3,6 @@
   <app-header></app-header>
   <div *ngFor="let radio of radios; let i = index">
     <app-radio-statios [radio]="radio"></app-radio-statios>
+    <app-radios-chanell [radio]="radio"></app-radios-chanell>
   </div>
 </div>
