add function onToggleCollaps when click the chanell will open the img and style the icon

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,7 +2,10 @@
 <div class="main">
   <app-header></app-header>
   <div *ngFor="let radio of radios; let i = index">
-    <app-radio-statios [radio]="radio"></app-radio-statios>
-    <app-radios-chanell [radio]="radio"></app-radios-chanell>
+    <app-radio-statios *ngIf="id === i" [radio]="radio"></app-radio-statios>
+    <app-radios-chanell
+      (click)="onToggleCollapse(i)"
+      [radio]="radio"
+    ></app-radios-chanell>
   </div>
 </div>
