--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,5 +1,5 @@
 <div class="header">
   <i class="fa fa-chevron-left"></i>
   <span>STATIONS</span>
-  <i class="fa fa-power-off"></i>
+  <i (click)="onToogle()" class="fa fa-power-off"></i>
 </div>
