--- a/src/app/components/radios-chanell/radios-chanell.component.scss
+++ b/src/app/components/radios-chanell/radios-chanell.component.scss
@@ -5,5 +5,6 @@ $radio-color: #9397a5;
   justify-content: space-around;
   font-size: 30px;
   background: $radio-background;
+  height: 125px;
   color: $radio-color;
 }
